--- a/signin.html
+++ b/signin.html
@@ -3,5 +3,42 @@
   <head>
     <meta charset="utf-8" />
     <title>로그인</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
+    />
+    <link rel="stylesheet" href="./src/reset.css" />
+    <link rel="stylesheet" href="./src/sign.css" />
   </head>
+  <body>
+    <article>
+      <div class="head">
+        <a href="index.html">
+          <img src="./images/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
+        </a>
+        <p>회원이 아니신가요? <a href="signup.html">회원 가입하기</a></p>
+      </div>
+      <form>
+        <label for="email">이메일</label>
+        <input type="email" id="email" placeholder="codeit@codeit.com" />
+        <label for="password">비밀번호</label>
+        <input type="password" id="password" placeholder="비밀번호 입력" />
+        <button type="submit">로그인</button>
+      </form>
+    </article>
+    <div class="sns-login">
+      <section>
+        <span>소셜 로그인</span>
+        <div>
+          <a href="https://www.google.com/" target="_blank">
+            <img src="images/google.svg" alt="google 로그인으로 연결되는 로고"
+          /></a>
+          <a href="https:/www.kakaocorp.com/page/”" target="_blank">
+            <img src="images/kakao.svg" alt="kakao 로그인으로 연결되는 로고"
+          /></a>
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
