Design : 눈모양 아이콘 추가 및 class 이름 변경

--- a/signin.html
+++ b/signin.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./src/sign.css" />
   </head>
   <body>
-    <article>
+    <div class="local-login">
       <div class="head">
         <a href="index.html">
           <img src="./images/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
@@ -24,9 +24,10 @@
         <input type="email" id="email" placeholder="codeit@codeit.com" />
         <label for="password">비밀번호</label>
         <input type="password" id="password" placeholder="비밀번호 입력" />
+        <img src="images/eye-off.svg" alt="비밀번호 확인하기" />
         <button type="submit">로그인</button>
       </form>
-    </article>
+    </div>
     <div class="sns-login">
       <section>
         <span>소셜 로그인</span>
