--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./src/sign.css" />
   </head>
   <body>
-    <article>
+    <div class="local-login">
       <div class="head">
         <a href="index.html">
           <img src="./images/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
@@ -24,11 +24,13 @@
         <input type="email" id="email" placeholder="codeit@codeit.com" />
         <label for="password">비밀번호</label>
         <input type="password" id="password" placeholder="비밀번호 입력" />
+        <img src="images/eye-off.svg" alt="비밀번호 확인하기" />
         <label for="password">비밀번호 확인</label>
         <input type="password" id="password" placeholder="비밀번호 입력" />
+        <img src="images/eye-off.svg" alt="비밀번호 확인하기" />
         <button type="submit">회원가입 하기</button>
       </form>
-    </article>
+    </div>
     <div class="sns-login">
       <section>
         <span>다른 방식으로 가입하기</span>
