--- a/signin.html
+++ b/signin.html
@@ -12,34 +12,44 @@
     <link rel="stylesheet" href="./src/sign.css" />
   </head>
   <body>
-    <div class="local-login">
-      <div class="head">
-        <a href="index.html">
-          <img src="./images/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
-        </a>
-        <p>회원이 아니신가요? <a href="signup.html">회원 가입하기</a></p>
+    <main>
+      <div class="email-login">
+        <header>
+          <a href="index.html">
+            <img src="./images/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
+          </a>
+          <p>회원이 아니신가요? <a href="signup.html">회원 가입하기</a></p>
+        </header>
+        <form aria-labelledby="login-form-title">
+          <label for="email">이메일</label>
+          <input type="email" id="email" placeholder="codeit@codeit.com" />
+          <label for="password">비밀번호</label>
+          <div>
+            <input type="password" id="password" placeholder="비밀번호 입력" />
+            <img src="images/eye-off.svg" alt="비밀번호 확인하기" />
+          </div>
+          <button type="submit">로그인</button>
+        </form>
       </div>
-      <form>
-        <label for="email">이메일</label>
-        <input type="email" id="email" placeholder="codeit@codeit.com" />
-        <label for="password">비밀번호</label>
-        <input type="password" id="password" placeholder="비밀번호 입력" />
-        <img src="images/eye-off.svg" alt="비밀번호 확인하기" />
-        <button type="submit">로그인</button>
-      </form>
-    </div>
-    <div class="sns-login">
-      <section>
+      <div class="social-login">
         <span>소셜 로그인</span>
         <div>
-          <a href="https://www.google.com/" target="_blank">
-            <img src="images/google.svg" alt="google 로그인으로 연결되는 로고"
+          <a
+            href="https://www.google.com/"
+            target="_blank"
+            title="Google로 로그인"
+          >
+            <img src="images/google.svg" alt="Google 로고"
           /></a>
-          <a href="https:/www.kakaocorp.com/page/”" target="_blank">
-            <img src="images/kakao.svg" alt="kakao 로그인으로 연결되는 로고"
+          <a
+            href="https://www.kakaocorp.com/page/"
+            target="_blank"
+            title="Kakao로 로그인"
+          >
+            <img src="images/kakao.svg" alt="Kakao 로고"
           /></a>
         </div>
-      </section>
-    </div>
+      </div>
+    </main>
   </body>
 </html>
