--- a/signin.html
+++ b/signin.html
@@ -34,18 +34,10 @@
       <div class="social-login">
         <span>소셜 로그인</span>
         <div>
-          <a
-            href="https://www.google.com/"
-            target="_blank"
-            title="Google로 로그인"
-          >
+          <a href="https://www.google.com/" title="Google로 로그인">
             <img src="images/google.svg" alt="Google 로고"
           /></a>
-          <a
-            href="https://www.kakaocorp.com/page/"
-            target="_blank"
-            title="Kakao로 로그인"
-          >
+          <a href="https://www.kakaocorp.com/page/" title="Kakao로 로그인">
             <img src="images/kakao.svg" alt="Kakao 로고"
           /></a>
         </div>
