--- a/signup.html
+++ b/signup.html
@@ -33,24 +33,16 @@
             <input type="password" id="password" placeholder="비밀번호 입력" />
             <img src="images/eye-off.svg" alt="비밀번호 확인하기" />
           </div>
-          <button type="submit">회원가입 하기</button>
+          <button type="submit">회원가입</button>
         </form>
       </div>
       <div class="social-login">
         <span>다른 방식으로 가입하기</span>
         <div>
-          <a
-            href="https://www.google.com/"
-            target="_blank"
-            title="Google로 로그인"
-          >
+          <a href="https://www.google.com/" title="Google로 로그인">
             <img src="images/google.svg" alt="Google 로고"
           /></a>
-          <a
-            href="https://www.kakaocorp.com/page/"
-            target="_blank"
-            title="Kakao로 로그인"
-          >
+          <a href="https://www.kakaocorp.com/page/" title="Kakao로 로그인">
             <img src="images/kakao.svg" alt="Kakao 로고"
           /></a>
         </div>
