--- a/index.html
+++ b/index.html
@@ -1,163 +1,130 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <title>Linkbrary</title>
     <link
       rel="stylesheet"
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
-    <link rel="stylesheet" href="./src/reset.css" />
-    <link rel="stylesheet" href="./src/index.css" />
+    <link rel="stylesheet" href="src/reset.css" />
+    <link rel="stylesheet" href="src/index.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="index.html">
-          <img src="./images/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
-        </a>
-        <a class="cta cta-short" href="signin.html">
-          <span>로그인</span>
-        </a>
+        <a href="/"><img src="images/logo.svg" alt="logo" /></a>
+        <a class="cta cta-short" href="signin.html">로그인</a>
       </nav>
-      <div class="hero-header">
-        <h1 class="slogan background-clip-text">
-          세상의 모든 정보<span class="black"
-            >를
-            <br />
-            쉽게 저장하고 관리해 보세요</span
-          >
-        </h1>
-        <a class="cta cta-long" href="signup.html">
-          <span>링크 추가하기</span>
-        </a>
-        <img
-          src="./images/hero.png"
-          class="hero-image"
-          alt="Linkbrary 서비스 소개"
-        />
-      </div>
     </header>
     <article>
+      <main>
+        <div class="title">
+          <span class="background-clip-text pink">세상의 모든 정보</span>
+          를<br />쉽게 저장하고 관리해 보세요
+        </div>
+        <a class="cta cta-long" href="signup.html">링크 추가하기</a>
+        <img src="images/main.png" class="main--img" alt="메인 이미지" />
+      </main>
       <section>
-        <h2 class="title title-1-gradient background-clip-text">
-          원하는 링크<span class="black"
-            >를
-            <br />
-            저장하세요</span
-          >
-        </h2>
-        <p class="description">
-          나중에 읽고 싶은 글, 다시 보고 싶은 영상,
-          <br />
-          사고 싶은 옷, 기억하고 싶은 모든 것을
-          <br />
-          한 공간에 저장하세요.
-        </p>
-        <img
-          src="./images/image1.png"
-          class="content-image"
-          alt="링크의 내용이 담긴 카드들"
-        />
+        <div class="container">
+          <div class="text-box">
+            <div class="slogan">
+              <span class="background-clip-text content-1">원하는 링크</span>
+              를<br />저장하세요
+            </div>
+            <div class="small">
+              나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br />
+              사고 싶은 옷, 기억하고 싶은 모든 것을<br />
+              한 공간에 저장하세요.
+            </div>
+          </div>
+          <img
+            src="images/image1.png"
+            class="section--img"
+            alt="링크 저장 가능"
+          />
+        </div>
       </section>
       <section>
-        <h2 class="title title-2-gradient background-clip-text">
-          <span class="black">링크를 폴더로</span>
-          <br />
-          관리<span class="black">하세요</span>
-        </h2>
-        <p class="description">
-          나만의 폴더를 무제한으로 만들고
-          <br />
-          다양하게 활용할 수 있습니다.
-        </p>
-        <img
-          src="./images/image2.png"
-          class="content-image"
-          alt="폴더 이름 변경 기능"
-        />
+        <div class="container">
+          <img
+            src="images/image2.png"
+            class="section--img"
+            alt="폴더 이름 변경 가능"
+          />
+          <div class="text-box">
+            <div class="slogan">
+              링크를 폴더로<br />
+              <span class="background-clip-text content-2">관리</span>
+              하세요
+            </div>
+            <div class="small">
+              나만의 폴더를 무제한으로 만들고<br />
+              다양하게 활용할 수 있습니다.
+            </div>
+          </div>
+        </div>
       </section>
       <section>
-        <h2 class="title title-3-gradient background-clip-text">
-          <span class="black">저장한 링크를</span>
-          <br />
-          공유<span class="black">해 보세요</span>
-        </h2>
-        <p class="description">
-          여러 링크를 폴더에 담고 공유할 수 있습니다.
-          <br />
-          가족, 친구, 동료들에게 쉽고 빠르게 링크를
-          <br />
-          공유해 보세요.
-        </p>
-        <img
-          src="./images/image3.png"
-          class="content-image"
-          alt="폴더 공유 기능"
-        />
+        <div class="container">
+          <div class="text-box">
+            <div class="slogan">
+              저장한 링크를<br />
+              <span class="background-clip-text content-3">공유</span>
+              하세요
+            </div>
+            <div class="small">
+              여러 링크를 폴더에 담고 공유할 수 있습니다.<br />
+              가족, 친구, 동료들에게 쉽고 빠르게 링크를<br />
+              공유해 보세요.
+            </div>
+          </div>
+          <img
+            src="images/image3.png"
+            class="section--img"
+            alt="링크 공유 가능"
+          />
+        </div>
       </section>
       <section>
-        <h2 class="title title-4-gradient background-clip-text">
-          <span class="black">저장한 링크를</span>
-          <br />
-          검색<span class="black">해 보세요</span>
-        </h2>
-        <p class="description">중요한 정보들을 검색으로 쉽게 찾아보세요.</p>
-        <img
-          src="./images/image4.png"
-          class="content-image"
-          alt="링크 검색 기능"
-        />
+        <div class="container">
+          <img
+            src="images/image4.png"
+            class="section--img"
+            alt="링크 검색 가능"
+          />
+          <div class="text-box">
+            <div class="slogan">
+              저장한 링크를<br />
+              <span class="background-clip-text content-4">검색</span>
+              해 보세요
+            </div>
+            <div class="small">중요한 정보들을 검색으로 쉽게 찾아보세요.</div>
+          </div>
+        </div>
       </section>
     </article>
     <footer>
       <div class="footer-box">
         <span class="copyright">©codeit - 2023</span>
-        <div class="footer-links">
-          <a class="footer-link" href="privacy.html">Privacy Policy</a>
-          <a class="footer-link" href="faq.html">FAQ</a>
+        <div class="footer--link">
+          <a href="privacy.html">Privacy Policy</a>
+          <a href="faq.html">FAQ</a>
         </div>
-        <div class="sns">
-          <a
-            href="https://www.facebook.com/"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img
-              src="./images/facebook.svg"
-              alt="facebook 홈페이지로 연결된 facebook 로고"
-            />
+        <div class="footer--sns">
+          <a href="https://www.facebook.com" target="_blank">
+            <img src="images/facebook.svg" alt="icons_facebook" />
           </a>
-          <a
-            href="https://twitter.com/"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img
-              src="./images/twitter.svg"
-              alt="twitter 홈페이지로 연결된 twitter 로고"
-            />
+          <a href="https://www.twitter.com" target="_blank"
+            ><img src="images/twitter.svg" alt="icons_twitter" />
           </a>
-          <a
-            href="https://www.youtube.com/"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img
-              src="./images/youtube.svg"
-              alt="youtube 홈페이지로 연결된 youtube 로고"
-            />
+          <a href="https://www.youtube.com" target="_blank"
+            ><img src="images/youtube.svg" alt="icons_youtube" />
           </a>
-          <a
-            href="https://www.instagram.com/"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img
-              src="./images/instagram.svg"
-              alt="instagram 홈페이지로 연결된 instagram 로고"
-            />
+          <a href="https://www.instagram.com" target="_blank"
+            ><img src="images/instagram.svg" alt="icons_instagram" />
           </a>
         </div>
       </div>
