--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <article>
       <main>
         <div class="title">
-          <span class="background-clip-text pink">세상의 모든 정보</span>
-          를<br />쉽게 저장하고 관리해 보세요
+          <span class="background-clip-text pink">세상의 모든 정보</span
+          >를<br />쉽게 저장하고 관리해 보세요
         </div>
         <a class="cta cta-long" href="signup.html">링크 추가하기</a>
         <img src="images/main.png" class="main--img" alt="메인 이미지" />
@@ -31,8 +31,8 @@
         <div class="container">
           <div class="text-box">
             <div class="slogan">
-              <span class="background-clip-text content-1">원하는 링크</span>
-              를<br />저장하세요
+              <span class="background-clip-text content-1">원하는 링크</span
+              >를<br />저장하세요
             </div>
             <div class="small">
               나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br />
@@ -57,8 +57,7 @@
           <div class="text-box">
             <div class="slogan">
               링크를 폴더로<br />
-              <span class="background-clip-text content-2">관리</span>
-              하세요
+              <span class="background-clip-text content-2">관리</span>하세요
             </div>
             <div class="small">
               나만의 폴더를 무제한으로 만들고<br />
@@ -72,8 +71,7 @@
           <div class="text-box">
             <div class="slogan">
               저장한 링크를<br />
-              <span class="background-clip-text content-3">공유</span>
-              하세요
+              <span class="background-clip-text content-3">공유</span>하세요
             </div>
             <div class="small">
               여러 링크를 폴더에 담고 공유할 수 있습니다.<br />
@@ -98,8 +96,7 @@
           <div class="text-box">
             <div class="slogan">
               저장한 링크를<br />
-              <span class="background-clip-text content-4">검색</span>
-              해 보세요
+              <span class="background-clip-text content-4">검색</span>해 보세요
             </div>
             <div class="small">중요한 정보들을 검색으로 쉽게 찾아보세요.</div>
           </div>
