--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>Linkbrary</title>
+    <meta property="og:url" content="https://codeitlinkbrary.netlify.app" />
+    <meta property="og:image" content="images/description.png" />
+    <meta property="og:title" content="Linkbrary" />
+    <meta
+      property="og:description"
+      content="세상의 모든 정보를 쉽게 저장하고 관리해보세요"
+    />
     <link
       rel="stylesheet"
       type="text/css"
