--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
   <body>
     <header>
       <nav>
-        <a href="/"><img src="images/logo.svg" alt="logo" /></a>
+        <a href="/"><img class="logo" src="images/logo.svg" alt="logo" /></a>
         <a class="cta cta-short" href="signin.html">로그인</a>
       </nav>
     </header>
     <article>
       <main>
         <div class="title">
-          <span class="background-clip-text pink">세상의 모든 정보</span
+          <span class="background-clip-text main--text">세상의 모든 정보</span
           >를<br />쉽게 저장하고 관리해 보세요
         </div>
         <a class="cta cta-long" href="signup.html">링크 추가하기</a>
@@ -36,17 +36,15 @@
       </main>
       <section>
         <div class="container">
-          <div class="text-box">
-            <div class="slogan">
-              <span class="background-clip-text content-1">원하는 링크</span
-              >를<br />저장하세요
-            </div>
-            <div class="small">
-              나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br />
-              사고 싶은 옷, 기억하고 싶은 모든 것을<br />
-              한 공간에 저장하세요.
-            </div>
+          <div class="slogan">
+            <span class="background-clip-text content-1">원하는 링크</span>를
+            저장하세요
           </div>
+          <div class="small">
+            나중에 읽고 싶은 글, 다시 보고 싶은 영상, 사고 싶은 옷, 기억하고
+            싶은 모든 것을 한 공간에 저장하세요.
+          </div>
+
           <img
             src="images/image1.png"
             class="section--img"
@@ -61,31 +59,26 @@
             class="section--img"
             alt="폴더 이름 변경 가능"
           />
-          <div class="text-box">
-            <div class="slogan">
-              링크를 폴더로<br />
-              <span class="background-clip-text content-2">관리</span>하세요
-            </div>
-            <div class="small">
-              나만의 폴더를 무제한으로 만들고<br />
-              다양하게 활용할 수 있습니다.
-            </div>
+          <div class="slogan">
+            링크를 폴더로
+            <span class="background-clip-text content-2">관리</span>하세요
+          </div>
+          <div class="small">
+            나만의 폴더를 무제한으로 만들고 다양하게 활용할 수 있습니다.
           </div>
         </div>
       </section>
       <section>
         <div class="container">
-          <div class="text-box">
-            <div class="slogan">
-              저장한 링크를<br />
-              <span class="background-clip-text content-3">공유</span>하세요
-            </div>
-            <div class="small">
-              여러 링크를 폴더에 담고 공유할 수 있습니다.<br />
-              가족, 친구, 동료들에게 쉽고 빠르게 링크를<br />
-              공유해 보세요.
-            </div>
+          <div class="slogan">
+            저장한 링크를
+            <span class="background-clip-text content-3">공유</span>하세요
           </div>
+          <div class="small">
+            여러 링크를 폴더에 담고 공유할 수 있습니다. 가족, 친구, 동료들에게
+            쉽고 빠르게 링크를 공유해 보세요.
+          </div>
+
           <img
             src="images/image3.png"
             class="section--img"
@@ -100,13 +93,12 @@
             class="section--img"
             alt="링크 검색 가능"
           />
-          <div class="text-box">
-            <div class="slogan">
-              저장한 링크를<br />
-              <span class="background-clip-text content-4">검색</span>해 보세요
-            </div>
-            <div class="small">중요한 정보들을 검색으로 쉽게 찾아보세요.</div>
+
+          <div class="slogan">
+            저장한 링크를
+            <span class="background-clip-text content-4">검색</span>해 보세요
           </div>
+          <div class="small">중요한 정보들을 검색으로 쉽게 찾아보세요.</div>
         </div>
       </section>
     </article>
