--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Linkbrary</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:url" content="https://codeitlinkbrary.netlify.app" />
     <meta property="og:image" content="images/description.png" />
     <meta property="og:title" content="Linkbrary" />
@@ -44,7 +45,6 @@
             나중에 읽고 싶은 글, 다시 보고 싶은 영상, 사고 싶은 옷, 기억하고
             싶은 모든 것을 한 공간에 저장하세요.
           </div>
-
           <img
             src="images/image1.png"
             class="section--img"
@@ -78,7 +78,6 @@
             여러 링크를 폴더에 담고 공유할 수 있습니다. 가족, 친구, 동료들에게
             쉽고 빠르게 링크를 공유해 보세요.
           </div>
-
           <img
             src="images/image3.png"
             class="section--img"
@@ -93,7 +92,6 @@
             class="section--img"
             alt="링크 검색 가능"
           />
-
           <div class="slogan">
             저장한 링크를
             <span class="background-clip-text content-4">검색</span>해 보세요
