--- a/signup.html
+++ b/signup.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>로그인</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       type="text/css"
