Refactor : line-height 단위 통일, class명 통일

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </article>
     <footer>
       <div class="footer-box">
-        <span class="copyright">©codeit - 2023</span>
+        <span class="footer--copyright">©codeit - 2023</span>
         <div class="footer--link">
           <a href="privacy.html">Privacy Policy</a>
           <a href="faq.html">FAQ</a>
