--- a/signin.html
+++ b/signin.html
@@ -27,7 +27,11 @@
           <label for="password">비밀번호</label>
           <div>
             <input type="password" id="password" placeholder="비밀번호 입력" />
-            <img src="images/eye-off.svg" alt="비밀번호 확인하기" />
+            <img
+              class="eye-icon"
+              src="images/eye-off.svg"
+              alt="비밀번호 확인하기"
+            />
           </div>
           <button type="submit">로그인</button>
         </form>
