--- a/signup.html
+++ b/signup.html
@@ -27,12 +27,20 @@
           <label for="password">비밀번호</label>
           <div>
             <input type="password" id="password" placeholder="비밀번호 입력" />
-            <img src="images/eye-off.svg" alt="비밀번호 확인하기" />
+            <img
+              class="eye-icon"
+              src="images/eye-off.svg"
+              alt="비밀번호 확인하기"
+            />
           </div>
           <label for="password">비밀번호 확인</label>
           <div>
             <input type="password" id="password" placeholder="비밀번호 입력" />
-            <img src="images/eye-off.svg" alt="비밀번호 확인하기" />
+            <img
+              class="eye-icon"
+              src="images/eye-off.svg"
+              alt="비밀번호 확인하기"
+            />
           </div>
           <button type="submit">회원가입</button>
         </form>
