Feat : 눈 모양 아이콘 누르면 비밀번호 보이는 기능 추가

--- a/signin.html
+++ b/signin.html
@@ -21,7 +21,7 @@
           </a>
           <p>회원이 아니신가요? <a href="signup.html">회원 가입하기</a></p>
         </header>
-        <form aria-labelledby="login-form-title">
+        <form id="login-form">
           <label for="email">이메일</label>
           <input type="email" id="email" placeholder="codeit@codeit.com" />
           <label for="password">비밀번호</label>
@@ -48,5 +48,6 @@
         </div>
       </div>
     </main>
+    <script type="module" src="scripts/singin.js" />
   </body>
 </html>
