--- a/signin.html
+++ b/signin.html
@@ -24,6 +24,7 @@
         <form id="login-form">
           <label for="email">이메일</label>
           <input type="email" id="email" placeholder="codeit@codeit.com" />
+          <p class="error-message"></p>
           <label for="password">비밀번호</label>
           <div>
             <input type="password" id="password" placeholder="비밀번호 입력" />
