Feat : 이메일 및 비밀번호 유효성 검사 로직 추가 및 스타일 변경

--- a/signin.html
+++ b/signin.html
@@ -27,7 +27,11 @@
           <p class="error-message"></p>
           <label for="password">비밀번호</label>
           <div>
-            <input type="password" id="password" placeholder="비밀번호 입력" />
+            <input
+              type="password"
+              class="password"
+              placeholder="비밀번호 입력"
+            />
             <img
               class="eye-icon"
               src="images/eye-off.svg"
