--- a/signup.html
+++ b/signup.html
@@ -21,27 +21,38 @@
           </a>
           <p>이미 회원이신가요? <a href="signin.html">로그인 하기</a></p>
         </header>
-        <form aria-labelledby="signin-form-title">
+        <form id="signup-form">
           <label for="email">이메일</label>
           <input type="email" id="email" placeholder="codeit@codeit.com" />
+          <p class="error-message"></p>
           <label for="password">비밀번호</label>
           <div>
-            <input type="password" id="password" placeholder="비밀번호 입력" />
+            <input
+              type="password"
+              class="password"
+              placeholder="비밀번호 입력"
+            />
             <img
               class="eye-icon"
               src="images/eye-off.svg"
               alt="비밀번호 확인하기"
             />
           </div>
+          <p class="error-message"></p>
           <label for="password">비밀번호 확인</label>
           <div>
-            <input type="password" id="password" placeholder="비밀번호 입력" />
+            <input
+              type="password"
+              class="password"
+              placeholder="비밀번호 입력"
+            />
             <img
               class="eye-icon"
               src="images/eye-off.svg"
               alt="비밀번호 확인하기"
             />
           </div>
+          <p class="error-message"></p>
           <button type="submit">회원가입</button>
         </form>
       </div>
@@ -57,5 +68,6 @@
         </div>
       </div>
     </main>
+    <script type="module" src="scripts/singup.js"></script>
   </body>
 </html>
