chore : script 태그의 닫는 태그 수정

--- a/signin.html
+++ b/signin.html
@@ -54,6 +54,6 @@
         </div>
       </div>
     </main>
-    <script type="module" src="scripts/singin.js" />
+    <script type="module" src="scripts/singin.js"></script>
   </body>
 </html>
