Chore : 페이지 이동 방식 변경

--- a/signup.html
+++ b/signup.html
@@ -21,7 +21,7 @@
           </a>
           <p>이미 회원이신가요? <a href="signin.html">로그인 하기</a></p>
         </header>
-        <form id="signup-form">
+        <form id="signup-form" action="folder.html">
           <label for="email">이메일</label>
           <input type="email" id="email" placeholder="codeit@codeit.com" />
           <p class="error-message"></p>
