--- a/signin.html
+++ b/signin.html
@@ -21,7 +21,7 @@
           </a>
           <p>회원이 아니신가요? <a href="signup.html">회원 가입하기</a></p>
         </header>
-        <form id="login-form">
+        <form id="login-form" action="folder.html">
           <label for="email">이메일</label>
           <input type="email" id="email" placeholder="codeit@codeit.com" />
           <p class="error-message"></p>
