Chore : form태그와 input태그 id를 class로 수정

--- a/signin.html
+++ b/signin.html
@@ -21,9 +21,9 @@
           </a>
           <p>회원이 아니신가요? <a href="signup.html">회원 가입하기</a></p>
         </header>
-        <form id="login-form" action="folder.html">
+        <form class="login-form" action="folder.html">
           <label for="email">이메일</label>
-          <input type="email" id="email" placeholder="codeit@codeit.com" />
+          <input type="email" class="email" placeholder="codeit@codeit.com" />
           <p class="error-message"></p>
           <label for="password">비밀번호</label>
           <div>
