--- a/signup.html
+++ b/signup.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>로그인</title>
+    <title>회원가입</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
@@ -21,9 +21,9 @@
           </a>
           <p>이미 회원이신가요? <a href="signin.html">로그인 하기</a></p>
         </header>
-        <form id="signup-form" action="folder.html">
+        <form class="signup-form" action="folder.html">
           <label for="email">이메일</label>
-          <input type="email" id="email" placeholder="codeit@codeit.com" />
+          <input type="email" class="email" placeholder="codeit@codeit.com" />
           <p class="error-message"></p>
           <label for="password">비밀번호</label>
           <div>
